--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: (Yiannis)
 last_name: Sarridis
 email: gsarridis@iti.gr
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Ioannis (Yiannis) Sarridis personal website
+  Ioannis (Yiannis) Sarridis personal website.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
