--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,8 @@ pirsch_analytics: # your Pirsch analytics site ID (length 32 characters)
 openpanel_analytics: # your Openpanel analytics client ID (format: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX)
 
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag 
-google_site_verification: cbV7MdN34U4Wz5ZlleBFs1muuT7jDz1rjg2CHD-P3CE # your google-site-verification ID (Google Search Console)
+# google_site_verification: cbV7MdN34U4Wz5ZlleBFs1muuT7jDz1rjg2CHD-P3CE # your google-site-verification ID (Google Search Console)
+google_site_verification: p4UuQPUQjBGCWmRLFztUDdPAZHkHjgkHq4Rlif-tGHc
 bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 # # -----------------------------------------------------------------------------
